[package]
authors = ["Adrian Perez de Castro <aperez@igalia.com>"]
name = "popsicle"
version = "0.1.0"

[dev-dependencies]
tempdir = "0.3"

[dependencies]
blake2-rfc = "^0.2"
env_logger = "^0.4"
error-chain = "^0.11"
goblin = "^0.0"
lazy_static = "^0.2"
libflate = "^0.1"
log = "^0.3"
memmap = "^0.5"
regex = "^0.2"
structopt = "^0.1"
structopt-derive = "^0.1"
tar = "^0.4"
xdg = "^2.0"

[profile.release]
lto = true
