[package]
authors = ["Adrian Perez de Castro <aperez@igalia.com>"]
name = "popsicle"
version = "0.1.0"

[dev-dependencies]
tempdir = "0.3"
pretty_assertions = "*"

[dependencies]
blake2-rfc = "^0.2"
env_logger = "^0.4"
error-chain = "^0.11"
lazy_static = "^0.2"
libflate = "^0.1"
log = "^0.3"
memmap = "^0.5"
regex = "^0.2"
structopt = "^0.1"
structopt-derive = "^0.1"
tar = "^0.4"
xdg = "^2.0"

[dependencies.goblin]
version = "^0.0"
default-features = false
features = ["std", "endian_fd"]

[profile.release]
lto = true

[features]
default = ["elf"]
elf = ["goblin/elf32", "goblin/elf64"]
